# mxe

./: Makefile  Notes.txt  toolchain.cmake
src/: boost-2-pth.patch  boost-3-archiver.patch  boost.mk  bzip2.mk  cairo.mk  cmake-conf.mk  curl.mk  dbus.mk  docbook-xml.mk  docbook-xsl.mk  freetds-1-apple.patch  freetds.mk  gcc.mk  glib-2-x86_64-apple-darwin15.patch  glib-3-osx-version.patch  glib.mk  gnutls-1-fixes.patch  gnutls-2-enumerator-comma.patch  gnutls.mk  harfbuzz-1-fixes.patch  harfbuzz.mk  jasper.mk  jpeg-test.c  jpeg.mk  libffi.mk  libgcrypt.mk  libgpg_error.mk  libiconv.mk  libidn2-1-enumerator-comma.patch  libidn2.mk  libmng-1-booleans.patch  libmng.mk  libmysqlclient-2-hack.patch  libmysqlclient.mk  libpng.mk  libqrencode.mk  libssh2.mk  libxml2.mk  libzip.mk  mozjs52.mk  (+34 more)
src/cmake/conf/: mxe-conf.cmake.in  target-cmake.in
src/qttools-test/: CMakeLists.txt
